[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podbean-mcp"
version = "0.1.0"
description = "MCP server for Podbean API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.7.1",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
